--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,13 @@
   "files.associations": {
     "typeinfo": "cpp",
     "compare": "cpp",
-    "type_traits": "cpp"
+    "type_traits": "cpp",
+    "optional": "cpp",
+    "system_error": "cpp",
+    "array": "cpp",
+    "functional": "cpp",
+    "tuple": "cpp",
+    "utility": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
@@ -60,5 +66,6 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "C_Cpp.autocompleteAddParentheses": true
 }
